--- a/WalletRunner/src/app.css
+++ b/WalletRunner/src/app.css
@@ -23,3 +23,22 @@ The following CSS rule changes the font size of all Buttons that have the
 Button.-primary {
   font-size: 18;
 }
+
+.btn {
+  background: #7c015d;
+  border-width: 1;
+  border-color: #7c015d;
+  color: white;
+  width: 400;
+  padding: 5 10;
+  border-radius: 30%;
+  margin: 5 0;
+}
+
+.form-control {
+  border-bottom-color: #7c015d;
+  border-bottom-width: 2;
+  margin: 5 0;
+  font-size: 20;
+  padding: 8 4;
+}
