--- a/WalletRunner/src/app/app.component.html
+++ b/WalletRunner/src/app/app.component.html
@@ -1,3 +1,7 @@
-<GridLayout>
-  <page-router-outlet></page-router-outlet>
-</GridLayout>
+<!-- <StackLayout>
+  <ns-current-challenge></ns-current-challenge>
+</StackLayout> -->
+<StackLayout>
+  <!-- <ns-stack></ns-stack> -->
+  <ns-flexbox></ns-flexbox>
+</StackLayout>
