--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,8 +1,9 @@
-<h1>App html</h1>
+<h1>Ваши карты</h1>
 <div *ngIf="mockCards.length; else noelement" class="container">
-  <div *ngFor="let c of mockCards">
+  <!-- <div *ngFor="let c of mockCards">
     <app-card [card]="c"></app-card>
-  </div>
+  </div> -->
+  <app-card-list></app-card-list>
 </div>
 <ng-template #noelement>No Elements</ng-template>
 
