модульность и ленивая подгрузка

--- a/src/app/cards/page/card-page/card-page.component.html
+++ b/src/app/cards/page/card-page/card-page.component.html
@@ -1,4 +1,7 @@
-<button class="btn" (click)="onClickBack()">Тыкни</button>
-<p>card-page works!</p>
+<button class="btn" (click)="onClickBack()">&leftarrow;</button>
+<h1>{{ card.title }}</h1>
+<br>
+<br>
+<br>
+<br>
 <p>{{ card.num }}</p>
-<p>{{ card.title }}</p>
