--- a/src/app/pages/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/main-page.component.scss
@@ -1,3 +1,12 @@
-h1 {
+* {
   text-align: center;
+}
+
+.btn {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  font-size: x-large;
+  margin: 0;
+  padding: 0;
 }
