--- a/src/app/cards/components/card-item/card-item.component.html
+++ b/src/app/cards/components/card-item/card-item.component.html
@@ -1,4 +1,4 @@
 <div class="card" (click)="onCardClick()">
-  <h2>{{ _card.title }}</h2>
-  <p>{{ _card.num }}</p>
+  <h2>{{ card.title }}</h2>
+  <p>{{ card.num }}</p>
 </div>
