--- a/src/app/cards/components/card-list/card-list.component.html
+++ b/src/app/cards/components/card-list/card-list.component.html
@@ -1,3 +1,3 @@
 <div>
-  <app-card-item *ngFor="let c of mockCards" [_card]="c"></app-card-item>
+  <app-card-item *ngFor="let c of mockCards" [card]="c"></app-card-item>
 </div>
