--- a/src/app/pages/add-card-page/add-card-page.component.scss
+++ b/src/app/pages/add-card-page/add-card-page.component.scss
@@ -13,3 +13,12 @@ input {
         border: solid 2px red;
     }
 }
+
+:disabled {
+    background-color: grey;
+    transition: linear 350ms;
+}
+
+.menu-btn {
+    float: right;
+}
