--- a/src/app/cards/pages/card-page/card-page.component.scss
+++ b/src/app/cards/pages/card-page/card-page.component.scss
@@ -6,11 +6,10 @@
   width: 50px;
   height: 50px;
   padding: 0;
-  margin: 0;
   font-weight: bolder;
   font-size: xx-large;
 }
-button {
-  padding: 0;
-  margin: 0;
+
+.menu-btn {
+    float: right;
 }
