--- a/src/app/pages/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/main-page.component.scss
@@ -1,12 +1,14 @@
 * {
-  text-align: center;
+    text-align: center;
 }
 
 .btn {
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-  font-size: x-large;
-  margin: 0;
-  padding: 0;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    font-size: x-large;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
