--- a/src/app/children/main-cabinet/children/cards/components/card-list/card-list.component.html
+++ b/src/app/children/main-cabinet/children/cards/components/card-list/card-list.component.html
@@ -1,3 +1,7 @@
 <div>
-  <app-card-item *ngFor="let c of mockCards" [card]="c | cardConvertModel" (click)="onCardClick(c)"></app-card-item>
+    <app-card-item
+        *ngFor="let c of mockCards$ | async"
+        [card]="c | cardConvertModel"
+        (click)="onCardClick(c)"
+    ></app-card-item>
 </div>
