--- a/src/app/children/main-cabinet/children/cards/pages/edit-card/edit-card.page.html
+++ b/src/app/children/main-cabinet/children/cards/pages/edit-card/edit-card.page.html
@@ -7,6 +7,7 @@
 >
     &#10004;
 </button>
+<ng-template appRef></ng-template>
 <div>
     <form [formGroup]="storeForm" (ngSubmit)="onSubmit()">
         <h1>WALLET RUNNER</h1>
