--- a/src/app/children/main-cabinet/children/cards/components/card-item/card-item.component.html
+++ b/src/app/children/main-cabinet/children/cards/components/card-item/card-item.component.html
@@ -1,4 +1,4 @@
-<div class="card">
-  <h2>{{ card.title }}</h2>
-  <p>{{ card.cardNumber| split }}</p>
+<div class="card" [paintCard]="card.title">
+    <h2>{{ card.title }}</h2>
+    <p>{{ card.cardNumber | split }}</p>
 </div>
