--- a/src/app/children/main-cabinet/children/cards/components/card-list/styles/card-list.component.scss
+++ b/src/app/children/main-cabinet/children/cards/components/card-list/styles/card-list.component.scss
@@ -1,5 +1,7 @@
 div {
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    // margin-bottom: 150px;
+    
 }
