--- a/src/app/children/main-cabinet/children/cards/pages/card-page/styles/card.page.scss
+++ b/src/app/children/main-cabinet/children/cards/pages/card-page/styles/card.page.scss
@@ -1,15 +1,19 @@
 * {
-  text-align: center;
+    text-align: center;
 }
 
 .btn {
-  width: 50px;
-  height: 50px;
-  padding: 0;
-  font-weight: bolder;
-  font-size: xx-large;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    font-weight: bolder;
+    font-size: xx-large;
 }
 
 .menu-btn {
     float: right;
+}
+
+.star {
+    font-weight: normal;
 }
