--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "SF Pro Display", sans-serif;
     font-size: 1rem;
     line-height: 1.6;
     background-color: #fff;
@@ -64,9 +64,7 @@ img {
 }
 
 .card {
-    padding: 1rem;
-    border: #ccc 1px dotted;
-    margin: 0.7rem 0;
+    margin: 0.7rem auto;
 }
 
 input,
