--- a/src/app/children/main-cabinet/children/add-card-page/pages/add-card.page.html
+++ b/src/app/children/main-cabinet/children/add-card-page/pages/add-card.page.html
@@ -15,14 +15,15 @@
     <ng-template appRef></ng-template>
     <p>ДОБАВЛЕНИЕ НОВОЙ КАРТЫ</p>
     <br />
-    <br />
     <label for="storesSelect">ВЫБЕРИТЕ МАГАЗИН</label>
     <br />
-    <select name="stores" id="storesSelect" formControlName="store">
+    <select name="stores" id="storesSelect" formControlName="store" [(ngModel)]="selectedOptions">
         <option *ngFor="let store of stores" [value]="store">
             {{ store }}
         </option>
     </select>
+    <br />
+    <div [paintCard]="selectedOptions" class="card"></div>
     <br />
     <label for="barcode">ШТРИХКОД</label>
     <br />
