--- a/src/app/children/main-cabinet/children/add-card-page/pages/add-card.page.html
+++ b/src/app/children/main-cabinet/children/add-card-page/pages/add-card.page.html
@@ -17,7 +17,12 @@
     <br />
     <label for="storesSelect">ВЫБЕРИТЕ МАГАЗИН</label>
     <br />
-    <select name="stores" id="storesSelect" formControlName="store" [(ngModel)]="selectedOptions">
+    <select
+        name="stores"
+        id="storesSelect"
+        formControlName="store"
+        [(ngModel)]="selectedOptions"
+    >
         <option *ngFor="let store of stores" [value]="store">
             {{ store }}
         </option>
