--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body {
     font-family: "SF Pro Display", sans-serif;
     font-size: 1rem;
     line-height: 1.6;
-    background-color: #fff;
+    background-color: #E9E9E9;
     color: #333;
 }
 
