--- a/src/app/children/main-cabinet/children/add-card-page/pages/styles/add-card.page.scss
+++ b/src/app/children/main-cabinet/children/add-card-page/pages/styles/add-card.page.scss
@@ -5,7 +5,7 @@
 
 input,
 select {
-    margin: -20px auto 40px auto;
+    margin: -20px auto 0 auto;
     text-align: center;
     transition: linear 350ms;
     border: 2px solid #cfcfcf;
@@ -83,4 +83,10 @@ label {
 form {
     margin-top: 8em;
     width: 100%;
+}
+
+.card {
+    height: 0;
+    width: 0;
+    border-radius: 10px;
 }
