--- a/src/app/children/main-cabinet/children/cards/components/card-list/styles/card-list.component.scss
+++ b/src/app/children/main-cabinet/children/cards/components/card-list/styles/card-list.component.scss
@@ -2,6 +2,5 @@ div {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-    // margin-bottom: 150px;
-    
+    min-width: 317px ;
 }
