--- a/src/app/children/main-cabinet/pages/main-cabinet/styles/main-cabinet.page.scss
+++ b/src/app/children/main-cabinet/pages/main-cabinet/styles/main-cabinet.page.scss
@@ -1,3 +1,4 @@
+@charset "utf-8";
 * {
     text-align: center;
 }
@@ -11,4 +12,41 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
+}
+
+p:empty {
+    animation: loading 1.7s infinite linear;
+    background: #dedfe1;
+    background-image: -webkit-linear-gradient(
+        to right,
+        #dedfe1 0%,
+        #f2f3f5 20%,
+        #dedfe1 40%,
+        #dedfe1 100%
+    );
+    background-image: linear-gradient(
+        to right,
+        #dedfe1 0%,
+        #f2f3f5 20%,
+        #dedfe1 40%,
+        #dedfe1 100%
+    );
+    background-repeat: no-repeat;
+}
+
+p:empty.lead {
+    height: 153px;
+    width: 317px;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+@keyframes loading {
+    0% {
+        background-position: -250px;
+    }
+
+    100% {
+        background-position: 300px;
+    }
 }
