--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div appRef [style.z-index]="1"></div>
+<router-outlet>
+    <div class="background"></div>
+</router-outlet>
