--- a/src/app/children/main-cabinet/children/cards/components/card-item/card-item.component.html
+++ b/src/app/children/main-cabinet/children/cards/components/card-item/card-item.component.html
@@ -1,3 +1,6 @@
-<div class="card" [paintCard]="card.title" (click)="onCardClick()" [@cardMoveTrigger]="text">
-    <p>{{ card.cardNumber | split }}</p>
-</div>
+<div
+    class="card"
+    [paintCard]="card.title"
+    [@cardMoveTrigger]="text"
+    (click)="onMouseCardClick()"
+></div>
