--- a/src/app/children/main-cabinet/children/cards/components/card-item/styles/card-item.component.scss
+++ b/src/app/children/main-cabinet/children/cards/components/card-item/styles/card-item.component.scss
@@ -1,7 +1,7 @@
 .card {
     height: 153px;
     width: 317px;
-    border: 1px solid black;
+    // border: 1px solid black;
     margin-bottom: -90px;
     box-shadow: 0px -5px 9px -2px #000000;
     border-radius: 10px;
