--- a/src/app/children/main-cabinet/children/cards/components/card-list/styles/card-list.component.scss
+++ b/src/app/children/main-cabinet/children/cards/components/card-list/styles/card-list.component.scss
@@ -2,5 +2,9 @@ div {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-    min-width: 317px ;
+    min-width: 317px;
+}
+
+div:last-child {
+    margin-bottom: 85px;
 }
