--- a/src/app/children/main-cabinet/modules/modal-window/modal/styles/modal.component.scss
+++ b/src/app/children/main-cabinet/modules/modal-window/modal/styles/modal.component.scss
@@ -10,23 +10,27 @@
 .modal {
     padding: 1rem;
     text-align: center;
+    // align-items:flex-start;
     background: #e9e9e9;
     border: 1px solid #cfcfcf;
     border-radius: 10px;
-    width: 80%;
+    width: 90%;
     max-width: 400px;
-    height: 100px;
-    position: absolute;
+    height: fit-content;
+    position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
 
 .btn {
+    margin: 0;
+    // display: block;
     width: 45%;
     max-width: 80px;
+    min-width: 3;
     height: 20px;
-    margin: 5px;
+    // margin-left: 30px;
     font-size: medium;
     background: #505759;
     border-radius: 5px;
@@ -34,14 +38,31 @@
     letter-spacing: 0.04em;
     font-size: medium;
     line-height: 20px;
-    margin-top: 1em;
+    margin-top: 2.5em;
+}
+
+.btn-left {
+    margin-right: 15px;
+}
+
+.btn-right {
+    margin-left: 15px;
 }
 
 .prompt {
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: block;
     font-weight: 400;
     letter-spacing: 0.04em;
     color: black;
     font-size: medium;
     line-height: 20px;
     margin-top: 0.5em;
+    margin-right: auto;
+    margin-left: auto;
+    height: fit-content;
+    width: 80%;
 }
