--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,12 +10,11 @@ body {
     font-family: "SF Pro Display", sans-serif;
     font-size: 1rem;
     line-height: 1.6;
-    background-color: #E9E9E9;
+    background-color: #e9e9e9;
     color: #333;
 }
 
 .container {
-    max-width: 1000px;
     margin: 0 auto;
     padding-top: 1rem;
 }
@@ -32,9 +31,9 @@ ul {
     list-style: none;
 }
 
-img {
-    width: 100%;
-}
+// img {
+//     width: 100%;
+// }
 
 .btn {
     display: inline-block;
@@ -82,6 +81,10 @@ hr {
     margin: 0.5rem 0;
 }
 
+html {
+    touch-action: manipulation;
+}
+
 html,
 body {
     height: 100%;
@@ -89,4 +92,20 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+h1 {
+    font-family: "SF Pro Display";
+    font-style: normal;
+    font-weight: bolder;
+    line-height: 24px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.085em;
+    position: absolute;
+    top: 7%;
+    bottom: 85%;
+    left: 25%;
+    right: 25%;
+    font-size: x-large;
 }
